Now test if we can get a local directory, when we open a terminal on the current view. It uses the new NetAccess::mostLocalURL() to take care of UDS_LOCAL_PATH (used for example by media:/).

BUG:95644


svn path=/trunk/KDE/kdebase/konqueror/; revision=416229